--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,14 +20,14 @@
                 <i class="fas fa-print"></i> PDF
             </button></li>
             <li><a href="/index.html" class="menu-text">Home</a></li>
-            <li><a href="/photos_of_my_dogs_page.html" class="menu-text">Dog Photos</a></li>
+            <li><a href="/dogs.html" class="menu-text">Dog Photos</a></li>
             <li class="dropdown">
                 <a href="#" class="menu-text dropdown-toggle">More</a>
                 <ul class="dropdown-menu">
                     <li><a href="#summary" class="menu-text">Summary</a></li>
                     <li><a href="#professionalExperience" class="menu-text">Experience</a></li>
                     <li><a href="#education" class="menu-text">Education</a></li>
-                    <li><a href="/photos_of_my_dogs_page.html" class="menu-text">Photos of my dogs</a></li>
+                    <li><a href="/dogs.html" class="menu-text">Photos of my dogs</a></li>
                     <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
                 </ul>
             </li>
@@ -82,6 +81,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    <script src="/scripts (16).js" defer></script>
+    <script src="/scripts.js" defer></script>
 </body>
 </html>
