--- a/dogs.html
+++ b/dogs.html
@@ -20,12 +20,11 @@
             <li class="dropdown">
                 <a href="#" class="menu-text dropdown-toggle">More</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#gallery" class="menu-text">Gallery</a></li>
-                    <li><a href="#contact" class="menu-text">Contact</a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
+                    <li><a href="/prank.html" class="menu-text">Only Fans</a></li>
                 </ul>
             </li>
             <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="/prank.html" target="_blank" class="menu-icon"><img src="/assets/images/logos/prank.svg" alt="prank" class="prank-logo"></a></li>
             <li class="theme-toggle-wrapper">
                 <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
                 <label for="themeToggleButton" class="theme-toggle-label">
