--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remy Russell's Resume</title>
+    <title>Remy Russell Resume</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -19,15 +19,6 @@
             <li><button id="downloadPdfButton" class="download-pdf menu-text">
                 <i class="fas fa-print"></i> PDF
             </button></li>
-            <li><a href="/index.html" class="menu-text">Home</a></li>
-            <li><a href="/dogs.html" class="menu-text">Dog Photos</a></li>
-            <li class="dropdown">
-                <a href="#" class="menu-text dropdown-toggle">More</a>
-                <ul class="dropdown-menu">
-                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
-                    <li><a href="/prank.html" class="menu-text">Only Fans</a></li>
-                </ul>
-            </li>
             <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
             <li class="theme-toggle-wrapper">
                 <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
@@ -77,6 +68,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    <script src="/scripts.js" defer></script>
+    <script src="/theme_management_functions.js" defer></script>
 </body>
 </html>
