--- a/dogs.html
+++ b/dogs.html
@@ -15,15 +15,6 @@
     </button>
     <nav id="menu" class="menu">
         <ul>
-            <li><a href="/index.html" class="menu-text">Home</a></li>
-            <li><a href="/dogs.html" class="menu-text">Dog Photos</a></li>
-            <li class="dropdown">
-                <a href="#" class="menu-text dropdown-toggle">More</a>
-                <ul class="dropdown-menu">
-                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
-                    <li><a href="/prank.html" class="menu-text">Only Fans</a></li>
-                </ul>
-            </li>
             <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
             <li class="theme-toggle-wrapper">
                 <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
@@ -57,6 +48,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    <script src="/scripts.js"></script>
+    <script src="/theme_management_functions.js"></script>
 </body>
 </html>
