--- a/dogs.html
+++ b/dogs.html
@@ -48,6 +48,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    <script src="/theme_management_functions.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 </html>
