--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    <script src="/theme_management_functions.js" defer></script>
+    <script src="/scripts.js" defer></script>
 </body>
 </html>
