--- a/dogs.html
+++ b/dogs.html
@@ -31,7 +31,7 @@
     </nav>
     <div class="container">
         <header>
-            <h1>Photos of My Dogs</h1>
+            <h1>Photos of My Doggos</h1>
             <a href="/index.html" class="back-link">Back to Resume</a>
         </header>
         <section class="gallery" id="gallery">
