--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remy Russell Resume</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/general_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
@@ -19,6 +19,7 @@
             <li><button id="downloadPdfButton" class="download-pdf menu-text">
                 <i class="fas fa-print"></i> PDF
             </button></li>
+            <li><a href="/dogs.html" class="menu-text"><i class="fas fa-paw"></i> Dog Photos</a></li>
             <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
             <li class="theme-toggle-wrapper">
                 <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
