--- a/dogs.html
+++ b/dogs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photos of My Doggos</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/general_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="dogs-page">
@@ -15,6 +15,7 @@
     </button>
     <nav id="menu" class="menu">
         <ul>
+            <li><a href="/dogs.html" class="menu-text disabled"><i class="fas fa-paw"></i> Dog Photos</a></li>
             <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
             <li class="theme-toggle-wrapper">
                 <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
@@ -31,7 +32,7 @@
     </nav>
     <div class="container">
         <header>
-            <h1>Photos of My Doggos</h1>
+            <h1>Photos of My Dogs</h1>
             <a href="/index.html" class="back-link">Back to Resume</a>
         </header>
         <section class="gallery" id="gallery">
