--- a/dogs.html
+++ b/dogs.html
@@ -33,7 +33,7 @@
     <div class="container">
         <header>
             <h1>Photos of My Dogs</h1>
-            <a href="/index.html" class="back-link">Back to Resume</a>
+            <button class="back-button" onclick="window.location.href='/index.html'"><i class="fas fa-arrow-left"></i> Back to Resume</button>
         </header>
         <section class="gallery" id="gallery">
             <img src="/assets/images/dogs/dog1.jpeg" alt="Dog 1" class="dog-photo">
