--- a/dogs.html
+++ b/dogs.html
@@ -32,7 +32,7 @@
     </nav>
     <div class="container">
         <header>
-            <h1>Photos of My Dawgs</h1>
+            <h1>Photos of My Dogs</h1>
             <button class="back-button" onclick="window.location.href='/index.html'"><i class="fas fa-arrow-left"></i> Back to Resume</button>
         </header>
         <section class="gallery" id="gallery">
