--- a/dogs.html
+++ b/dogs.html
@@ -15,6 +15,7 @@
     </button>
     <nav id="menu" class="menu">
         <ul>
+            <li><a href="/index.html" class="menu-text"><i class="fas fa-file-alt"></i> Resume</a></li>
             <li><a href="/dogs.html" class="menu-text disabled"><i class="fas fa-paw"></i> Dog Photos</a></li>
             <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
             <li class="theme-toggle-wrapper">
@@ -33,7 +34,7 @@
     <div class="container">
         <header>
             <h1>Photos of My Dogs</h1>
-            <button class="back-button" onclick="window.location.href='/index.html'"><i class="fas fa-arrow-left"></i> Back to Resume</button>
+            <button class="back-button" onclick="window.location.href='/index.html'"><i class="fas fa-arrow-left"></i> Back</button>
         </header>
         <section class="gallery" id="gallery">
             <img src="/assets/images/dogs/dog1.jpeg" alt="Dog 1" class="dog-photo">
@@ -50,6 +51,6 @@
         <i class="fas fa-arrow-up"></i>
     </button>
     <script src="/scripts.js"></script>
-    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'95db6990eef17a5d',t:'MTc1MjI2OTUzNC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'95e385b8d895b0d0',t:'MTc1MjM1NDU3NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
