--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remy Russell's Resume</title>
+    <title>Remy Russell - Resume</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
@@ -36,11 +36,6 @@
     <div class="container">
         <h1 id="name">Loading...</h1>
         <p id="role">Loading...</p>
-        <div class="contact">
-            <p id="email">Loading...</p>
-            <p id="linkedin">Loading...</p>
-            <p id="website">Loading...</p>
-        </div>
         <div id="summary">
             <h2>Summary</h2>
             <p id="summaryText">Loading...</p>
