--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remy Russell - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Remy Russell's Resume</title>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-    <canvas id="particleCanvas"></canvas>
     <button id="menuToggleButton" class="menu-toggle">
         <span></span>
         <span></span>
@@ -16,50 +16,60 @@
     </button>
     <nav id="menu" class="menu">
         <ul>
-            <li>
-                <button id="downloadPdfButton" class="download-pdf">
-                    <span class="menu-icon">↓</span> PDF
-                </button>
-            </li>
-            <li>
-                <a href="dogs.html">Dog Photos</a>
+            <li><button id="downloadPdfButton" class="download-pdf menu-text">
+                <i class="fas fa-print"></i> PDF
+            </button></li>
+            <li><a href="/dogs.html" class="menu-text"><i class="fas fa-paw"></i> Dog Photos</a></li>
+            <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+            <li class="theme-toggle-wrapper">
+                <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
+                <label for="themeToggleButton" class="theme-toggle-label">
+                    <span class="theme-toggle-track">
+                        <span class="theme-toggle-knob">
+                            <i class="theme-toggle-icon fa fa-sun"></i>
+                            <i class="theme-toggle-icon fa fa-moon"></i>
+                        </span>
+                    </span>
+                </label>
             </li>
         </ul>
-        <div class="theme-toggle-wrapper">
-            <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
-            <label for="themeToggleButton" class="theme-toggle-label">
-                <span class="theme-toggle-track"></span>
-                <span class="theme-toggle-thumb"></span>
-            </label>
-        </div>
     </nav>
     <div class="container">
-        <h1 id="name">Loading...</h1>
-        <p id="role">Loading...</p>
-        <div id="summary">
+        <header>
+            <h1 id="name"></h1>
+            <div class="contact">
+                <p id="phone"></p>
+                <p id="email"></p>
+            </div>
+            <p id="role"></p>
+        </header>
+        <section id="summary">
             <h2>Summary</h2>
-            <p id="summaryText">Loading...</p>
-        </div>
-        <div id="professionalExperience">
+            <p id="summaryText"></p>
+        </section>
+        <section id="professionalExperience">
             <h2>Professional Experience</h2>
-        </div>
-        <div id="education">
+        </section>
+        <section id="education">
             <h2>Education</h2>
-        </div>
-        <div id="certifications">
+        </section>
+        <section id="certifications">
             <h2>Certifications</h2>
             <ul id="certificationList"></ul>
-        </div>
-        <div id="skills">
+        </section>
+        <section id="skills">
             <h2>Core Skills</h2>
             <ul id="skillList"></ul>
             <h2>Tools & Frameworks</h2>
             <ul id="toolsAndFrameworks"></ul>
             <h2>Interests & Hobbies</h2>
             <ul id="funSkills"></ul>
-        </div>
+        </section>
     </div>
-    <button id="backToTop" class="back-to-top">↑</button>
-    <script src="scripts.js"></script>
+    <button id="backToTop" class="back-to-top" title="Back to Top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    <script src="/scripts.js" defer></script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'95db6990eef17a5d',t:'MTc1MjI2OTUzNC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
